<resources>
    <string name="app_name">Kalkulator BMI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="bmi_intro">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau
        tidak. Cobalah sekarang!
    </string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini.</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>
    <string name="pengertian">Pengertian</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beratBadan"/>
    <string name="t_bmi">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau
        tidak
    </string>
    <string name="berat_badan_kg">Berat Badan (kg)</string>
    <string name="tinggi_badan_cm">Tinggi Badan(cm)</string>
    <string name="TinggiBadan"/>
    <string name="rb_pria">Pria</string>
    <string name="rb_wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="t_jenis_kelamin">Jenis Kelamin</string>
    <string name="btn_lihatSaran">LIHAT SARAN</string>
    <string name="btn_bagikan">BAGIKAN</string>
    <string name="info_aplikasi">Info Aplikasi</string>
    <string name="t_nim">NIM : 6706180122</string>
    <string name="t_nama">Nama : Kharis Zakaria</string>
    <string name="t_kelas">Kelas : 4203</string>
    <string name="tv_hasil">hasil</string>
    <string name="tv_hasil_ideal">IDEAL</string>
</resources>
