<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainFragment" android:id="@+id/frameLayout2">
    <TextView
            android:text="@string/t_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/inp_berat"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/beratBadan"/>
    <TextView
            android:text="@string/berat_badan_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t_berat" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/inp_berat" app:layout_constraintBottom_toBottomOf="@+id/inp_berat"/>
    <TextView
            android:text="@string/tinggi_badan_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t_tinggi" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/inp_tinggi" app:layout_constraintBottom_toBottomOf="@+id/inp_tinggi"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/inp_tinggi" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inp_berat" android:hint="@string/TinggiBadan"/>
    <TextView
            android:text="@string/t_jenis_kelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t_kelamin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/rb_pria"
            app:layout_constraintTop_toTopOf="@+id/rb_pria"/>
    <RadioButton
            android:text="@string/rb_pria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_pria" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inp_tinggi" app:layout_constraintStart_toEndOf="@+id/t_kelamin"
            android:layout_marginStart="40dp"/>
    <RadioButton
            android:text="@string/rb_wanita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_wanita"
            app:layout_constraintStart_toEndOf="@+id/rb_pria" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/inp_tinggi"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_hitung" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/rb_pria"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t_nilaibmi" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_hitung" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintHorizontal_bias="0.442" tools:text="Nilai BMI : "/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hasil"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:text="@string/tv_hasil"
            app:layout_constraintStart_toEndOf="@+id/t_nilaibmi" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/t_nilaibmi"
            app:layout_constraintBottom_toBottomOf="@+id/t_nilaibmi"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t_hasilbmi" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/t_nilaibmi" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:capitalize="none"
            tools:text="@string/tv_hasil_ideal"/>
    <Button
            android:text="@string/btn_lihatSaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_saran" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/t_hasilbmi" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="76dp"
            android:drawableStart="@drawable/ic_format_list_bulleted_black_24dp"/>
    <Button
            android:text="@string/btn_bagikan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_bagikan"
            app:layout_constraintTop_toTopOf="@+id/btn_saran"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="84dp"
            android:drawableStart="@drawable/ic_share_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_saran" app:layout_constraintStart_toEndOf="@+id/btn_saran"
            android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>